# practice-robot

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/endpoints/: robot.py
backend/app/core/: errors.py  events.py
backend/app/grpc_client/: robot_client.py
backend/app/protos/: compile.py
backend/app/protos/robot/: robot.proto  robot_pb2.py  robot_pb2_grpc.py
backend/app/schemas/: robot.py
backend/app/websockets/: manager.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: InfoPanel.tsx  MapCanvas.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: websocket.ts
robot-tracker/: Dockerfile  go.mod
robot-tracker/cmd/server/: main.go
robot-tracker/internal/config/: config.go
robot-tracker/internal/position/: generator.go
robot-tracker/internal/service/: tracker.go
robot-tracker/pkg/logger/: logger.go
robot-tracker/proto/: robot.pb.go  robot.proto  robot_grpc.pb.go
